task2/objects/Product_Details__c.object
<CustomObject>
    <fields>
        <fullName>ATM_Fee_in_other_currencies__c</fullName>
        <label>ATM Fee in other currencies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Card_Replacement_Cost__c</fullName>
        <label>Card Replacement Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_per_Calendar_Month__c</fullName>
        <label>Cost per Calendar Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_Country__c</fullName>
        <label>Home Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Home_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Product Details</relationshipLabel>
        <relationshipName>Product_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Product Details</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>